MTX-155
Keep Matching Lines implementation.